--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Resources on housing discrimination in the Berkeley Hills
+description: A set of resources on the history of housing discrimination and redlining in the Berkeley Hills
