--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Resources on the history of housing discrimination in the Berkeley Hills
-description: A set of resources on the history of housing discrimination and redlining in the Berkeley Hills
+title: Berkeley Heights
+description: A short history of housing discrimination the North Berkeley Hills
