--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Berkeley Heights
-description: A short history of housing discrimination the North Berkeley Hills
+title: Housing Discrimination in the North Berkeley Hills
+description: A short history with references
