--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Housing Discrimination in the North Berkeley Hills
+title: Housing Discrimination in Berkeley's Northbrae district
 description: A short history with references
