Added date of Peralta grant and Google Analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Housing Discrimination in Berkeley's Northbrae district
 description: A short history with references
+google_analytics: UA-29680385-3
